added peer stats recording
