# docs/swagger.json
@@ -4,6 +4,54 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/owners/{owner}/stat": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stats"
+                ],
+                "summary": "Get total stat for multiple peers",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "start of the period",
+                        "name": "from_ms",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "end of the period; 0 means no limit",
+                        "name": "to_ms",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "owner",
+                        "name": "owner",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.TransferStatResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid period",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/peers": {
             "get": {
                 "description": "Returns a list of peers, optionally filtered by owner",
@@ -184,6 +232,58 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/peers/{pubkey}/stat": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stats"
+                ],
+                "summary": "Get total stat for peer",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "start of the period",
+                        "name": "from_ms",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "end of the period; 0 means no limit",
+                        "name": "to_ms",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Peer key",
+                        "name": "pubkey",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.TransferStatResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid period",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "404": {
+                        "description": "Peer not found",
                         "schema": {
                             "$ref": "#/definitions/main.APIError"
                         }
@@ -409,6 +509,14 @@
                 "is_enabled": {
                     "type": "boolean"
                 },
+                "latest_endpoint": {
+                    "description": "optional",
+                    "type": "string"
+                },
+                "latest_handshake": {
+                    "description": "optional",
+                    "type": "string"
+                },
                 "owner": {
                     "description": "optional",
                     "type": "string"
@@ -455,6 +563,20 @@
                 },
                 "prefix": {
                     "type": "string"
+                }
+            }
+        },
+        "main.TransferStatResponse": {
+            "type": "object",
+            "properties": {
+                "public_key_base64": {
+                    "type": "string"
+                },
+                "rx": {
+                    "type": "integer"
+                },
+                "tx": {
+                    "type": "integer"
                 }
             }
         },
@@ -520,7 +642,7 @@
                             "type": "integer"
                         },
                         "preshared_key": {
-                            "description": "set only if preshared key was given, or random preshared key generation was requested",
+                            "description": "optional; set only if preshared key was given, or random preshared key generation was requested",
                             "type": "string"
                         },
                         "public_key": {
